First read model more precise naming: ServiceBusClient -> CommandQueue
