# src/EventRegistrar.Backend/Infrastructure/Mediator/event-registrar-openapi.json
@@ -174,6 +174,38 @@
         }
       }
     },
+    "/api/UpdateRegistrationQueryReadModelCommand": {
+      "post": {
+        "tags": [
+          "UpdateRegistrationQueryReadModel"
+        ],
+        "operationId": "UpdateRegistrationQueryReadModel_Command",
+        "requestBody": {
+          "x-name": "UpdateRegistrationQueryReadModelCommand",
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateRegistrationQueryReadModelCommand"
+              }
+            }
+          },
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unit"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/SearchRegistrationQuery": {
       "post": {
         "tags": [
@@ -3559,6 +3591,38 @@
         }
       }
     },
+    "/api/StartUpdateAllReadModelsOfEventCommand": {
+      "post": {
+        "tags": [
+          "StartUpdateAllReadModelsOfEvent"
+        ],
+        "operationId": "StartUpdateAllReadModelsOfEvent_Command",
+        "requestBody": {
+          "x-name": "StartUpdateAllReadModelsOfEventCommand",
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/StartUpdateAllReadModelsOfEventCommand"
+              }
+            }
+          },
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Unit"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/HostingOffersQuery": {
       "post": {
         "tags": [
@@ -4202,6 +4266,20 @@
           "fallbackToPartyPass": {
             "type": "boolean",
             "nullable": true
+          },
+          "spots": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "$ref": "#/components/schemas/SpotDisplayItem"
+            }
+          },
+          "payments": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "$ref": "#/components/schemas/AssignedPaymentDisplayItem"
+            }
           }
         }
       },
@@ -4219,6 +4297,28 @@
           4
         ]
       },
+      "AssignedPaymentDisplayItem": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "amount": {
+            "type": "number",
+            "format": "decimal"
+          },
+          "bookingDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "currency": {
+            "type": "string",
+            "nullable": true
+          },
+          "paymentAssignmentId": {
+            "type": "string",
+            "format": "guid"
+          }
+        }
+      },
       "RegistrationQuery": {
         "type": "object",
         "additionalProperties": false,
@@ -4234,6 +4334,20 @@
         }
       },
       "SwapFirstLastNameCommand": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "eventId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "registrationId": {
+            "type": "string",
+            "format": "guid"
+          }
+        }
+      },
+      "UpdateRegistrationQueryReadModelCommand": {
         "type": "object",
         "additionalProperties": false,
         "properties": {
@@ -7025,28 +7139,6 @@
             "format": "guid"
           },
           "eventId": {
-            "type": "string",
-            "format": "guid"
-          }
-        }
-      },
-      "AssignedPaymentDisplayItem": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "amount": {
-            "type": "number",
-            "format": "decimal"
-          },
-          "bookingDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "currency": {
-            "type": "string",
-            "nullable": true
-          },
-          "paymentAssignmentId": {
             "type": "string",
             "format": "guid"
           }
@@ -10436,6 +10528,16 @@
           },
           "queueName": {
             "type": "string"
+          }
+        }
+      },
+      "StartUpdateAllReadModelsOfEventCommand": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "eventId": {
+            "type": "string",
+            "format": "guid"
           }
         }
       },
