# src/eventregistrar-admin-angular/src/app/api/api.ts
@@ -283,6 +283,57 @@ export class Api {
         return _observableOf(null as any);
     }
 
+    updateRegistrationQueryReadModel_Command(updateRegistrationQueryReadModelCommand: UpdateRegistrationQueryReadModelCommand | undefined): Observable<Unit> {
+        let url_ = this.baseUrl + "/api/UpdateRegistrationQueryReadModelCommand";
+        url_ = url_.replace(/[?&]$/, "");
+
+        const content_ = JSON.stringify(updateRegistrationQueryReadModelCommand);
+
+        let options_ : any = {
+            body: content_,
+            observe: "response",
+            responseType: "blob",
+            headers: new HttpHeaders({
+                "Content-Type": "application/json",
+                "Accept": "application/json"
+            })
+        };
+
+        return this.http.request("post", url_, options_).pipe(_observableMergeMap((response_ : any) => {
+            return this.processUpdateRegistrationQueryReadModel_Command(response_);
+        })).pipe(_observableCatch((response_: any) => {
+            if (response_ instanceof HttpResponseBase) {
+                try {
+                    return this.processUpdateRegistrationQueryReadModel_Command(response_ as any);
+                } catch (e) {
+                    return _observableThrow(e) as any as Observable<Unit>;
+                }
+            } else
+                return _observableThrow(response_) as any as Observable<Unit>;
+        }));
+    }
+
+    protected processUpdateRegistrationQueryReadModel_Command(response: HttpResponseBase): Observable<Unit> {
+        const status = response.status;
+        const responseBlob =
+            response instanceof HttpResponse ? response.body :
+            (response as any).error instanceof Blob ? (response as any).error : undefined;
+
+        let _headers: any = {}; if (response.headers) { for (let key of response.headers.keys()) { _headers[key] = response.headers.get(key); }}
+        if (status === 200) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            let result200: any = null;
+            result200 = _responseText === "" ? null : JSON.parse(_responseText, this.jsonParseReviver) as Unit;
+            return _observableOf(result200);
+            }));
+        } else if (status !== 200 && status !== 204) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            return throwException("An unexpected server error occurred.", status, _responseText, _headers);
+            }));
+        }
+        return _observableOf(null as any);
+    }
+
     searchRegistration_Query(searchRegistrationQuery: SearchRegistrationQuery | undefined): Observable<RegistrationMatch[]> {
         let url_ = this.baseUrl + "/api/SearchRegistrationQuery";
         url_ = url_.replace(/[?&]$/, "");
@@ -5484,6 +5535,57 @@ export class Api {
         return _observableOf(null as any);
     }
 
+    startUpdateAllReadModelsOfEvent_Command(startUpdateAllReadModelsOfEventCommand: StartUpdateAllReadModelsOfEventCommand | undefined): Observable<Unit> {
+        let url_ = this.baseUrl + "/api/StartUpdateAllReadModelsOfEventCommand";
+        url_ = url_.replace(/[?&]$/, "");
+
+        const content_ = JSON.stringify(startUpdateAllReadModelsOfEventCommand);
+
+        let options_ : any = {
+            body: content_,
+            observe: "response",
+            responseType: "blob",
+            headers: new HttpHeaders({
+                "Content-Type": "application/json",
+                "Accept": "application/json"
+            })
+        };
+
+        return this.http.request("post", url_, options_).pipe(_observableMergeMap((response_ : any) => {
+            return this.processStartUpdateAllReadModelsOfEvent_Command(response_);
+        })).pipe(_observableCatch((response_: any) => {
+            if (response_ instanceof HttpResponseBase) {
+                try {
+                    return this.processStartUpdateAllReadModelsOfEvent_Command(response_ as any);
+                } catch (e) {
+                    return _observableThrow(e) as any as Observable<Unit>;
+                }
+            } else
+                return _observableThrow(response_) as any as Observable<Unit>;
+        }));
+    }
+
+    protected processStartUpdateAllReadModelsOfEvent_Command(response: HttpResponseBase): Observable<Unit> {
+        const status = response.status;
+        const responseBlob =
+            response instanceof HttpResponse ? response.body :
+            (response as any).error instanceof Blob ? (response as any).error : undefined;
+
+        let _headers: any = {}; if (response.headers) { for (let key of response.headers.keys()) { _headers[key] = response.headers.get(key); }}
+        if (status === 200) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            let result200: any = null;
+            result200 = _responseText === "" ? null : JSON.parse(_responseText, this.jsonParseReviver) as Unit;
+            return _observableOf(result200);
+            }));
+        } else if (status !== 200 && status !== 204) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            return throwException("An unexpected server error occurred.", status, _responseText, _headers);
+            }));
+        }
+        return _observableOf(null as any);
+    }
+
     hostingOffers_Query(hostingOffersQuery: HostingOffersQuery | undefined): Observable<HostingOffers> {
         let url_ = this.baseUrl + "/api/HostingOffersQuery";
         url_ = url_.replace(/[?&]$/, "");
@@ -6213,6 +6315,8 @@ export interface RegistrationDisplayItem {
     statusText?: string;
     willPayAtCheckin?: boolean;
     fallbackToPartyPass?: boolean | null;
+    spots?: SpotDisplayItem[] | null;
+    payments?: AssignedPaymentDisplayItem[] | null;
 }
 
 export enum RegistrationState {
@@ -6221,12 +6325,24 @@ export enum RegistrationState {
     Cancelled = 4,
 }
 
+export interface AssignedPaymentDisplayItem {
+    amount?: number;
+    bookingDate?: Date;
+    currency?: string | null;
+    paymentAssignmentId?: string;
+}
+
 export interface RegistrationQuery {
     eventId?: string;
     registrationId?: string;
 }
 
 export interface SwapFirstLastNameCommand {
+    eventId?: string;
+    registrationId?: string;
+}
+
+export interface UpdateRegistrationQueryReadModelCommand {
     eventId?: string;
     registrationId?: string;
 }
@@ -7134,13 +7250,6 @@ export interface SendPaymentDueMailCommand {
     eventId?: string;
 }
 
-export interface AssignedPaymentDisplayItem {
-    amount?: number;
-    bookingDate?: Date;
-    currency?: string | null;
-    paymentAssignmentId?: string;
-}
-
 export interface AssignedPaymentsOfRegistrationQuery {
     eventId?: string;
     registrationId?: string;
@@ -8010,6 +8119,10 @@ export interface SaveDomainEventCommand {
     eventId?: string | null;
     eventType?: string;
     queueName?: string;
+}
+
+export interface StartUpdateAllReadModelsOfEventCommand {
+    eventId?: string;
 }
 
 export interface HostingOffers {
